tests/fixtures/invalid/InvalidShortClosure.php
<?php

namespace App;

$adder = fn (int $x)=>$x + 1;
